--- a/p_css/style.css
+++ b/p_css/style.css
@@ -485,7 +485,7 @@ footer.end-nav .next{
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   -webkit-transition: all 0.8s ease-in-out;
   -moz-transition: all 0.8s ease-in-out;
@@ -1356,7 +1356,7 @@ section.page img{
     width: 41.66666667%;
   }
   .col-lg-4 {
-    width: 33.33333333%;
+    width: 33%;
   }
   .col-lg-3 {
     width: 25%;
