--- a/p_css/style.css
+++ b/p_css/style.css
@@ -13,10 +13,26 @@ header{
   padding: 0px 14%;
   /*margin: 0 auto;*/
 }
-section{
-  padding: 0px 15%;
-  /*margin: 0 auto;*/
+/*
+{
+  margin:0px  2%;
+  padding: 0px 20%;
+  /*margin: 0 auto;
+}*/
+div.projectTitle{
+  margin:0px  10%;
+  border-bottom:5px solid black;
+  text-align: left;
+  
 }
+section.page{
+  padding: 0px 30%;
+}
+section.image{
+  padding: 0px 10%;
+}
+
+
 p{
   font-family: 'open Sans', sans-serif;
   font-weight: 300;
@@ -117,9 +133,11 @@ a{
 }
 p a:hover{
   text-decoration: none;
-  box-shadow: inset 0 0px 0 white, inset 0 -5px 0 rgba(200,200,200,0.5);
+  box-shadow: inset 0 0px 0 white, inset 0 -3px 0 rgb(223,64,76);
   cursor: pointer;
 }
+
+
 img {
   border: 0;
   vertical-align: middle;
@@ -134,6 +152,10 @@ img {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+.greyText{
+  color:#9B9B9B;
 }
 
 h4{
@@ -192,6 +214,10 @@ header a:hover{
   width: 40px;
   height: 40px;
   margin-top: 15px;
+}
+.black{color:black;}
+.light{
+  font-weight:300;
 }
 .nav li{
   display: inline-block;
@@ -304,6 +330,7 @@ section.title{
   position: relative;
   opacity: 1;
 }
+
 .title p{
   font-weight: 300;
   font-size: 24px;
@@ -350,7 +377,43 @@ section.page p,
 section.page li{
   line-height: 180%;
   font-size: 17px;
+  color:#515e65;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:400;
 }
+
+h1.projectTitle {
+  font-family: 'Open Sans', sans-serif;
+  font-size:8vh;
+}
+.annotation{
+  display:flex;
+  -webkit-box-align: end;
+  align-items:center;
+  vertical-align: baseline;
+  font:inherit;
+}
+.textContainer{
+  text-align:right;
+  vertical-align: baseline;
+  width:30%;
+  padding:0px 10%;
+
+}
+.imgContainer{
+  width:50%;
+  vertical-align: baseline;
+  margin-left:-5%;
+}
+.imgContainer img{
+  align:left;
+  width:100%;  
+}
+
+.label{
+  font-weight: 300;
+}
+
 ul.padding{
   padding: 0 15%;
 }
@@ -991,6 +1054,11 @@ p i{
   font-family: 'open Sans', sans-serif;
   font-weight: 300;
   font-size: 16px;
+}
+p.projectTitle i{
+  font-family: 'Open Sans', sans-serif;
+  font-size:20px;
+
 }
 p li i{
   font-family: 'open Sans', sans-serif;
