--- a/p_css/style.css
+++ b/p_css/style.css
@@ -14,6 +14,11 @@ header{
   /*margin: 0 auto;*/
 }
 
+section {
+  padding: 0px 15%;
+  /* margin: 0 auto; */
+}
+
 
 
 #title h2 {
@@ -30,13 +35,13 @@ header{
   /*margin: 0 auto;
 }*/
 div.projectTitle{
-  margin:0px  10%;
   border-bottom:5px solid black;
   text-align: left;
+  /*background-image:url("../p_image/bsi.png");*/
   
 }
 section.page{
-  padding: 0px 20%;
+  padding: 0px 15%;
 }
 section.image{
   padding: 0px 5%;
@@ -224,7 +229,7 @@ header.non-fixed a{
   text-transform: uppercase;
 }
 header a:hover{
-  color:rgb(223,64,76);
+  color:#de3f4c;
 }
 .logo_img{
   float: left;
@@ -332,7 +337,7 @@ header a:hover{
 }
 /*projects style*/
 section.title{
-  text-align: center;
+  text-align: left;
   height: 95vh;
   width: 100%;
   overflow: hidden;
@@ -342,7 +347,7 @@ section.title{
 }
 .title h1{
   margin-top: 20vh;
-  font-family: "open Sans",cursive;
+  font-family: 'Major Mono Display';
   font-size: 36px;
   z-index: 999;
   position: relative;
@@ -369,8 +374,7 @@ section.title{
 }
 section.page{
   width: 100%;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+ 
   position: relative;
 }
 section.page h1{
@@ -378,6 +382,7 @@ section.page h1{
   font-weight: 400;
   font-size: 28px;
   line-height: 180%;
+  padding-top:1vh;
 }
 section.page h2{
   font-family: "open Sans",cursive;
@@ -394,15 +399,16 @@ section.page h3{
 section.page p,
 section.page li{
   line-height: 180%;
-  font-size: 17px;
-  color:#515e65;
+  font-size: 15px;
+  color:black;
   font-family: 'Open Sans', sans-serif;
-  font-weight:400;
+  font-weight:300;
 }
 
 h1.projectTitle {
   font-family: 'Open Sans', sans-serif;
   font-size:8vh;
+padding-top:8vh;
 }
 .annotation{
   display:flex;
@@ -873,7 +879,7 @@ footer{
 }
 
 .box {
-  border-left: #eee 4px solid;
+  /*border-left: #eee 4px solid;*/
   padding: 10px;
   min-height: 90px;
 }
@@ -884,10 +890,13 @@ footer{
   font-size: 13px;
   margin: 0 0 8px;
 }
-.box p {
-  font-size: 15px;
+.box h5 {
+  font-size: 13px;
   line-height: 1.7;
   margin: 0;
+   color: #42413E;
+   font-weight:300;
+
 }
 
 /* slide show*/
