--- a/p_css/style.css
+++ b/p_css/style.css
@@ -154,11 +154,12 @@ a{
   text-decoration: none;
   cursor: pointer;
 }
-p a:hover{
+a:hover{
   text-decoration: none;
   box-shadow: inset 0 0px 0 white, inset 0 -3px 0 rgb(223,64,76);
   cursor: pointer;
 }
+
 
 
 img {
@@ -338,7 +339,7 @@ header a:hover{
 /*projects style*/
 section.title{
   text-align: left;
-  height: 95vh;
+  height: vh;
   width: 100%;
   overflow: hidden;
   position: relative;
