--- a/p_css/ibm_style.css
+++ b/p_css/ibm_style.css
@@ -163,6 +163,7 @@ a:hover {
 #olympic-feather-legend .bold-start {
     font-weight: 500;
     color: black;
+    font-size: 14px;
 }
 
 .past .bold-start {
